# rust-ed25519-compact

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: common.rs  curve25519.rs  deser.rs  ed25519.rs  edwards25519.rs  error.rs  field25519.rs  lib.rs  pem.rs  serde_support.rs  sha512.rs  x25519.rs
