[package]
name = "ed25519-compact"
version = "2.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A small, self-contained, wasm-friendly Ed25519 implementation"
readme = "README.md"
keywords = ["crypto", "ed25519", "x25519", "eddsa", "signature"]
repository = "https://github.com/jedisct1/rust-ed25519-compact"
homepage = "https://github.com/jedisct1/rust-ed25519-compact"
categories = ["algorithms", "cryptography", "no-std", "wasm"]
license = "MIT"

[features]
default = ["random", "std", "x25519", "pem"]
pem = ["ct-codecs"]
random = ["getrandom"]
traits = ["ed25519"]
self-verify = []
blind-keys = []
std = []
opt_size = []
disable-signatures = []
x25519 = []

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", optional = true, features = ["js"] }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dependencies]
getrandom = { version = "0.2", optional = true }

[dependencies]
ct-codecs = { version = "1.1", optional = true }
ed25519 = { version = "2.2", optional = true }

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dev-dependencies]
getrandom = { version = "0.2" }

[dev-dependencies]
ct-codecs = "1.1"
