[package]
name = "ed25519-compact"
version = "2.3.1"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "A small, self-contained, wasm-friendly Ed25519 implementation"
readme = "README.md"
keywords = ["crypto", "ed25519", "x25519", "eddsa", "signature"]
repository = "https://github.com/jedisct1/rust-ed25519-compact"
homepage = "https://github.com/jedisct1/rust-ed25519-compact"
categories = ["algorithms", "cryptography", "no-std", "wasm"]
license = "MIT"

[features]
default = ["random", "std", "x25519", "pem"]
pem = ["ct-codecs"]
random = ["getrandom"]
traits = ["ed25519"]
self-verify = []
blind-keys = []
std = []
opt_size = []
disable-signatures = []
x25519 = []

[dependencies]
ct-codecs = { version = "1.1", optional = true }
ed25519 = { version = "3.0", optional = true }
getrandom = { version = "0.4", optional = true, features = ["wasm_js"] }

[dev-dependencies]
ct-codecs = "1.1"
getrandom = { version = "0.4", features = ["wasm_js"] }
